force-app/main/default/objects/User/fields/Access_to_Which_Locations__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Which_Locations__c</fullName>
    <label>Access to Which Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations</valueSetName>
    </valueSet>
</CustomField>