force-app/main/default/objects/User/fields/AVSFQB__DBSync_Id__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__DBSync_Id__c</fullName>
    <description>DBSync Username</description>
    <inlineHelpText>DBSync UserName</inlineHelpText>
    <label>DBSync Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>