force-app/main/default/objects/User/fields/AVSFQB__DBSync_Passwd__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__DBSync_Passwd__c</fullName>
    <description>DBSync Login Password</description>
    <inlineHelpText>DBSync Login Password</inlineHelpText>
    <label>DBSync Passwd</label>
    <length>100</length>
    <type>Text</type>
</CustomField>