force-app/main/default/objects/User/fields/AVSFQB__DBSync_Profile__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__DBSync_Profile__c</fullName>
    <description>DBSync Profile Name</description>
    <inlineHelpText>DBSync Profile Name</inlineHelpText>
    <label>DBSync Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>