force-app/main/default/objects/User/fields/AVSFQB__QB_SalesRep_ID__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__QB_SalesRep_ID__c</fullName>
    <label>QB SalesRep ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>