force-app/main/default/objects/User/fields/AVSFQB__QBOE_Connection_Ticket__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__QBOE_Connection_Ticket__c</fullName>
    <defaultValue>&apos;V1-253-$n4Jb_vmujjJWx7f8gvS0Q:163331652&apos;</defaultValue>
    <description>QuickBooks Online Connection Ticket for DBSync</description>
    <inlineHelpText>QuickBooks Online Connection Ticket for DBSync</inlineHelpText>
    <label>QBOE Connection Ticket</label>
    <length>250</length>
    <type>Text</type>
</CustomField>