force-app/main/default/objects/User/fields/AVSFQB__QBOE_DBSync_Server__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__QBOE_DBSync_Server__c</fullName>
    <description>DBSync Server URL</description>
    <inlineHelpText>DBSync Server URL</inlineHelpText>
    <label>DBSync Server URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>