force-app/main/default/objects/User/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <label>Primary Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations</valueSetName>
    </valueSet>
</CustomField>