force-app/main/default/objects/User/listViews/Lake_Mary.listView-meta.xml
<ListView>
    <fullName>Lake_Mary</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Lake Mary</value>
    </filters>
    <label>Lake Mary</label>
    <sharedTo>
        <group>Lake_Mary</group>
    </sharedTo>
</ListView>