force-app/main/default/objects/User/listViews/Nashua.listView-meta.xml
<ListView>
    <fullName>Nashua</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Nashua</value>
    </filters>
    <label>Nashua</label>
    <sharedTo>
        <group>Nashua</group>
    </sharedTo>
</ListView>