force-app/main/default/objects/User/listViews/Winter_Park.listView-meta.xml
<ListView>
    <fullName>Winter_Park</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Winter Park</value>
    </filters>
    <label>Winter Park</label>
    <sharedTo>
        <group>Winter_Park</group>
    </sharedTo>
</ListView>